# encode-zigzag

./: .ghci  .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  encode-zigzag.cabal  hie.yaml  shell.nix
src/Data/Encode/: ZigZag.hs
src/Data/Encode/ZigZag/: Compat.hs  Prim.hs
