cabal-version: 2.4

name:         encode-zigzag
category:     Data
version:      0.0.0
synopsis:     Zigzag encoding signed integers.
description:  Zigzag encoding signed integers.
license:      BSD-3-Clause
license-file: LICENSE
build-type:   Simple
author:       jake
maintainer:   jacobleach@protonmail.com

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.1

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wmissing-import-lists
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    , base     ^>= 4.16

library
  import:         common
  hs-source-dirs: src

  exposed-modules:
    Data.Encode.ZigZag
    Data.Encode.ZigZag.Prim

  build-depends:
    , ghc-prim ^>= 0.8
