cabal-version: 2.2

name:         encode-zigzag
category:     Data
version:      1.0.0
synopsis:     Zigzag encoding signed integers.
description:  Zigzag encoding signed integers.
license:      BSD-3-Clause
license-file: LICENSE
build-type:   Simple
author:       jake
maintainer:   jacobleach@protonmail.com

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.1
  GHC == 9.0.1
  GHC == 8.10.7
  GHC == 8.8.4

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wmissing-import-lists
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Widentities
    -Wredundant-constraints
    -Wpartial-fields


  if (impl(ghc >= 8.10))
    ghc-options:
      -Wunused-packages

  build-depends:
    base >= 4.13

library
  import:         common
  hs-source-dirs: src

  exposed-modules:
    Data.Encode.ZigZag
    Data.Encode.ZigZag.Prim

  other-modules:
    Data.Encode.ZigZag.Compat

